# kdrama-semantic-search-recommendation

./: .gitignore  README.md  go.mod  pyproject.toml
cmd/api/: main.go
config/: README.md  example.env
data/: README.md
data/processed/: kdrama_ids.txt  kdramas.jsonl  kdramas_clean.jsonl  kdramas_embeddings_manifest.json
deploy/: Dockerfile.api  Dockerfile.embedder  README.md  docker-compose.yml
notebooks/: essay1_word_embeddings.ipynb  essay2_recommender_systems.ipynb
python/: README.md  requirements.txt
python/embed/: build_embeddings.py  embedder_service.py
python/index/: create_schema.py  import_objects.py
python/ingest/: enrich_titles.py  fetch_id_list.py
python/preprocess/: clean.py
web/: README.md
web/static/: app.js  index.html
