[project]
name = "kdrama-semantic-search-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "sentence-transformers>=5.4.1",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
